src/objects/District__c.object
<CustomObject>
    <fields>
        <fullName>Country_name__c</fullName>
        <formula>HYPERLINK(&quot;https://fexleservices5-dev-ed.lightning.force.com/lightning/r/Country__c/&quot; &amp; State__r.Country__r.Id &amp; &quot;/view&quot;, State__r.Country__r.Name , &quot;_blank&quot;) &amp; &quot; -&gt; &quot;  &amp;
 HYPERLINK(&quot;https://fexleservices5-dev-ed.lightning.force.com/lightning/r/State__c/&quot; &amp; State__r.Id &amp; &quot;/view&quot;, State__r.Name , &quot;_blank&quot;) &amp; &quot; -&gt; &quot;  &amp;  Name</formula>
        <label>Country name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>District_Pin_code__c</fullName>
        <label>District Pin code</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <label>State Name</label>
        <referenceTo>State__c</referenceTo>
        <relationshipLabel>Districts</relationshipLabel>
        <relationshipName>Districts</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>District</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>District Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Districts</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>